{+} New titles assets for some games {~} Changed title style from black and white to a colourful flat design {~} first tab of any tabbable is now automatically focused {+} Added tabbing functionality {~} #game now holds the data-game attribute {~} Tweaked rudimentary draft download tab markup {/} Temporarily added then removed auto selection of the first game in #games {~} Tweaked padding and size of #game {~} Fixed #catalogue input not responding due to misapplied property {~} Each tab in #game now has a backdrop filter and a background colour instead of it being only #preview {/} Attempted to add a transition to the title shown in #preview which refuses to work for some reason even though it does on the body::before, perhaps an in-between variable is required {~} No image preloading nor caching yet, although they should load as soon as they are loaded instead of having to exit and reenter the div (which breaks the transition to an empty image in the process ;-;) {~} used data-link attribute in `games.js`, although this will need to be adjusted as to move over the logic to `game.js` (tabbable), which means I will have to figure out a way to inherit from two classes at a time yay (prob wont happen lol), and data-link will certainly be refactored to point toward #game instead

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ input, button{
     filter: brightness(1.25);
   }
 
-  & * {
+  & > *:not(input) {
     pointer-events: none;
   }
 
@@ -121,7 +121,7 @@ nav:hover{
   flex-direction: column;
   align-items: center;
   gap: 10vh;
-  padding: 4rem;
+  padding: 2rem;
   z-index: 1;
 }
 
@@ -269,6 +269,12 @@ nav:hover{
   height: 100%;
 
   transition: filter 250ms, aspect-ratio 250ms;
+
+
+  &:is(:hover,:focus-visible,:focus-within,:has(input:checked)) {
+    backdrop-filter: blur(8px) brightness(1.25);
+  }
+
 }
 
 /* #preview > .info{
@@ -343,10 +349,12 @@ nav:hover{
   cursor: pointer;
 }
 
-:is(#games > div > div, #preview):is(:hover,:focus-visible,:focus-within,:has(input:checked)),#preview{
+
+/* :is(#games > div > div, #preview):is(:hover,:focus-visible,:focus-within,:has(input:checked)),#preview{
   backdrop-filter: blur(8px) brightness(1.25);
-  /* filter: brightness(1.25); */
-}
+  filter: brightness(1.25);
+} */
+
 /* #preview:focus-within{
   padding: 4%;
 } */
@@ -458,7 +466,31 @@ tabbable#game {
   border-radius: 1em;
   overflow: hidden;
 
+  display: flex;
+  flex-direction: column;
+
+  height: 25em;
+
+  transition: height 250ms;
+
+
+  & > *:not(.tabs) {
+    flex-grow: 1;
+    /* width: 100%; */
+    backdrop-filter: blur(8px) brightness(1.25);
+    background-color: rgba(48,48,48,0.25);
+  }
+
+  &[data-game=""]{
+    height: 0;
+  }
+
+
+
   & > .tabs {
+
+    /* bottom: -0.5em; */
+
 
     & > * {
       padding: 0.5em;
@@ -476,7 +508,6 @@ tabbable#game {
   }
 
 
-
   & > #preview {
 
     & > .series {
@@ -490,7 +521,7 @@ tabbable#game {
       filter: grayscale(1.0);
       /* grayscale(100%) contrast(0) brightness(100) */
 
-      transition: filter 250ms;
+      transition: filter 250ms, background-image 250ms;
 
       &:hover {
         filter: grayscale(0);
@@ -508,16 +539,13 @@ tabbable#game {
 
 #preview{
   display: flex;
-  height: 20em;
-  background-color: rgba(48,48,48,0.25);
+  /* height: 20em; */
+  /* background-color: rgba(48,48,48,0.25); */
   /* backdrop-filter: blur(4px) brightness(0.8); */
   border-radius: inherit;
 
   transition: filter 250ms, aspect-ratio 250ms, height 250ms;
 
-  &[data-game=""]{
-    height: 0;
-  }
 
   & > *{
     display: flex;
@@ -534,6 +562,7 @@ tabbable#game {
     min-width: 50%;
     padding: 1em;
 
+
     & > *{
       width: 100%;
     }
@@ -543,7 +572,9 @@ tabbable#game {
       aspect-ratio: unset;
       height: 100%;
       margin: 0;
-      padding: 2em;
+      padding: 0.75em;
+
+      transition: background-image 250ms;
     }
 
     & > .chips{
